<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qlcham"
    tools:context=".main.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constrain_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    >
    <TextView
        android:id="@+id/tv_quanly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quản Lý Chấm Công"
        android:textSize="@dimen/Size"
        android:textColor="@color/color_app"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/Size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ds_cn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btb"
        android:text="@string/name2"
        android:textColor="#2FB2D3"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size3"
        android:layout_marginEnd="@dimen/Size3"
        android:layout_marginTop="100dp"
        android:textSize="@dimen/Size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quanly"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ds_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btb"
        android:text="@string/name3"
        android:textColor="#2FB2D3"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size3"
        android:layout_marginEnd="@dimen/Size3"
        android:layout_marginTop="@dimen/Size2"
        android:textSize="@dimen/Size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ds_cn"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bttcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btb"
        android:text="@string/name5"
        android:textColor="#2FB2D3"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size3"
        android:layout_marginEnd="@dimen/Size3"
        android:layout_marginTop="@dimen/Size2"
        android:textSize="@dimen/Size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ds_sp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btb"
        android:text="@string/name6"
        android:textColor="#2FB2D3"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size3"
        android:layout_marginEnd="@dimen/Size3"
        android:layout_marginTop="@dimen/Size2"
        android:textSize="@dimen/Size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bttcc"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/thoat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btb"
        android:text="@string/name7"
        android:textColor="#2FB2D3"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size3"
        android:layout_marginEnd="@dimen/Size3"
        android:layout_marginTop="@dimen/Size2"
        android:textSize="@dimen/Size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bc"
        />


</androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>