<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ah"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/them_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sua_sp"
        android:textSize="@dimen/Size"
        android:textColor="@color/color_app"
        android:textStyle="bold"
        android:background="@drawable/custom_edit_text"
        android:layout_marginTop="@dimen/Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_masp"
        android:layout_width="@dimen/Size9"
        android:layout_height="@dimen/sizebutton"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/them_cn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Size4"
        android:layout_marginTop="@dimen/Size3"
        android:textSize="@dimen/Size4"
        android:background="@drawable/custom_edit_text"
        android:textStyle="bold"
        android:textColor="@color/color3"
        android:text="@string/ma_sp"
        />
    <EditText
        android:enabled="false"
        android:id="@+id/tv_masp2"
        android:layout_width="@dimen/size10"
        android:layout_height="@dimen/sizebutton"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/them_cn"
        app:layout_constraintStart_toEndOf="@+id/tv_masp"
        android:layout_marginStart="@dimen/Size6"
        android:layout_marginTop="@dimen/Size3"
        android:textSize="@dimen/Size4"
        android:background="@drawable/custom_edit_text"
        android:textStyle="normal"
        android:textColor="@color/color3"
        />
    <TextView
        android:id="@+id/tv_tensp"
        android:layout_width="@dimen/Size9"
        android:layout_height="@dimen/sizebutton"
        app:layout_constraintTop_toBottomOf="@+id/tv_masp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Size4"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:background="@drawable/custom_edit_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/color3"
        android:text="@string/name_sp"
        />
    <EditText
        android:id="@+id/tv_tensp2"
        android:layout_width="@dimen/size10"
        android:layout_height="@dimen/sizebutton"
        android:background="@drawable/custom_edit_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_masp2"
        app:layout_constraintStart_toEndOf="@+id/tv_tensp"
        android:layout_marginStart="@dimen/Size6"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:textStyle="normal"
        android:textColor="@color/color3"/>
    <TextView
        android:id="@+id/tv_dongia"
        android:layout_width="@dimen/Size9"
        android:layout_height="@dimen/sizebutton"
        app:layout_constraintTop_toBottomOf="@+id/tv_tensp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Size4"
        android:layout_marginTop="@dimen/Size5"
        android:gravity="center"
        android:background="@drawable/custom_edit_text"
        android:textSize="@dimen/Size4"
        android:textStyle="bold"
        android:textColor="@color/color3"
        android:text="@string/dg_sp"
        />
    <EditText
        android:id="@+id/dongia"
        android:layout_width="@dimen/size10"
        android:layout_height="@dimen/sizebutton"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_tensp2"
        app:layout_constraintStart_toEndOf="@+id/tv_tensp"
        android:layout_marginStart="@dimen/Size6"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:background="@drawable/custom_edit_text"
        android:textStyle="normal"
        android:textColor="@color/color3"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/luu_edit_sp"
        android:layout_width="@dimen/Size9"
        android:layout_height="@dimen/sizebutton"
        android:background="@drawable/custom_btb"
        android:text="@string/name_cc"
        android:textColor="@color/color_app"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size"
        android:layout_marginTop="@dimen/Size2"
        android:textSize="@dimen/Size4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dongia"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/huy"
        android:layout_width="@dimen/Size9"
        android:layout_height="@dimen/sizebutton"
        android:background="@drawable/custom_btb"
        android:text="@string/name_cc2"
        android:textColor="@color/color_app"
        android:gravity="center"
        android:layout_marginStart="@dimen/Size"
        android:layout_marginTop="@dimen/Size2"
        android:textSize="@dimen/Size4"
        app:layout_constraintStart_toEndOf="@+id/luu_edit_sp"
        app:layout_constraintTop_toBottomOf="@+id/dongia"/>

    <ImageView
        android:id="@+id/back_edt"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_chevron_left"
        android:layout_marginBottom="@dimen/Size5"
        android:layout_marginStart="@dimen/Size5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Size8"
        android:layout_marginBottom="@dimen/mg_btn"
        android:text="Back"
        android:gravity="center"
        android:textSize="@dimen/Size4"
        app:layout_constraintBottom_toBottomOf="@+id/back_edt"
        app:layout_constraintStart_toEndOf="@+id/back_edt" />

</androidx.constraintlayout.widget.ConstraintLayout>