<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginTop="@dimen/Size5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >
    <TextView
        android:id="@+id/tv_mcn"
        android:layout_width="@dimen/Size9"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Size4"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:textStyle="bold"
        android:background="@drawable/custom_edit_text"
        android:textColor="@color/color3"
        android:text="@string/name8"
        />
    <TextView
        android:id="@+id/tv_4"
        android:layout_width="@dimen/Size9"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_mcn"
        android:layout_marginStart="@dimen/Size6"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:textStyle="normal"
        android:textColor="@color/color3"
        />
    <TextView
        android:id="@+id/tv_mcn2"
        android:layout_width="@dimen/Size9"
        android:layout_height="wrap_content"

        android:background="@drawable/custom_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_mcn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Size4"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:textStyle="bold"
        android:textColor="@color/color3"
        android:text="@string/name9"
        />
    <TextView
        android:id="@+id/tv_5"
        android:layout_width="@dimen/Size9"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_4"
        app:layout_constraintStart_toEndOf="@+id/tv_mcn2"
        android:layout_marginStart="@dimen/Size6"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:background="@drawable/custom_edit_text"
        android:textStyle="normal"
        android:textColor="@color/color3"/>
    <TextView
        android:id="@+id/tv_mcn3"
        android:layout_width="@dimen/Size9"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_mcn2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Size4"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"

        android:textStyle="bold"
        android:background="@drawable/custom_edit_text"
        android:textColor="@color/color3"
        android:text="@string/name1_1"
        />
    <TextView
        android:id="@+id/tv_6"
        android:layout_width="@dimen/Size9"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_5"
        app:layout_constraintStart_toEndOf="@+id/tv_mcn3"
        android:layout_marginStart="@dimen/Size6"
        android:layout_marginTop="@dimen/Size5"
        android:textSize="@dimen/Size4"
        android:textStyle="normal"
        android:background="@drawable/custom_edit_text"
        android:textColor="@color/color3"/>

    <ImageView
        android:layout_width="@dimen/edit"
        android:layout_height="@dimen/edit"
        android:background="@drawable/ic_baseline_edit_24"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_4"

        />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>