<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/Size5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/tv_cc"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/Size4"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:padding="5dp"
            android:background="@drawable/custom_edit_text"
            android:textStyle="bold"
            android:textColor="@color/color3"
            android:text="@string/ma"
            />
        <TextView
            android:id="@+id/tv_cc2"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cc"
            android:layout_marginStart="@dimen/Size6"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:padding="5dp"
            android:background="@drawable/custom_edit_text"
            android:textStyle="normal"
            android:textColor="@color/color3"
            />
        <TextView
            android:id="@+id/tv_ngaycc"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity=""
            android:background="@drawable/custom_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_cc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/Size4"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/color3"
            android:text="@string/ngay"
            />
        <TextView
            android:id="@+id/tv_ngaycc2"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_cc2"
            app:layout_constraintStart_toEndOf="@+id/tv_ngaycc"
            android:layout_marginStart="@dimen/Size6"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:padding="5dp"
            android:textStyle="normal"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/color3"/>
        <TextView
            android:id="@+id/tv_mcn3"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_ngaycc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/Size4"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:textStyle="bold"
            android:padding="5dp"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/color3"
            android:text="@string/ma_nvv"
            />
        <TextView
            android:id="@+id/tv_mncc"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_ngaycc2"
            app:layout_constraintStart_toEndOf="@+id/tv_mcn3"
            android:layout_marginStart="@dimen/Size6"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:padding="5dp"
            android:textStyle="normal"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/color3"/>

        <ImageView
            android:id="@+id/edit"
            android:layout_width="@dimen/edit"
            android:layout_height="@dimen/edit"
            android:background="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toEndOf="@+id/tv_ngaycc2"

            app:layout_constraintTop_toBottomOf="@+id/tv_cc2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>