<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/Size5"
        android:id="@+id/itemsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/tv_mcn"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/Size4"
            android:layout_marginTop="@dimen/Size5"
            android:padding="5dp"
            android:textSize="@dimen/Size4"
            android:background="@drawable/custom_edit_text"
            android:textStyle="bold"
            android:textColor="@color/color3"
            android:text="@string/ma_sp"
            />
        <TextView
            android:id="@+id/tv_ma"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_mcn"
            android:layout_marginStart="@dimen/Size6"
            android:layout_marginTop="@dimen/Size5"
            android:background="@drawable/custom_edit_text"
            android:textSize="@dimen/Size4"
            android:textStyle="normal"
            android:textColor="@color/color3"
            />
        <TextView
            android:id="@+id/tv_mcn2"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_mcn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/Size4"
            android:layout_marginTop="@dimen/Size5"
            android:background="@drawable/custom_edit_text"
            android:textSize="@dimen/Size4"
            android:textStyle="bold"
            android:textColor="@color/color3"
            android:text="@string/name_sp"
            />
        <TextView
            android:id="@+id/tv_ten_sp_2"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_ma"
            app:layout_constraintStart_toEndOf="@+id/tv_mcn2"
            android:layout_marginStart="@dimen/Size6"
            android:layout_marginTop="@dimen/Size5"
            android:background="@drawable/custom_edit_text"
            android:textSize="@dimen/Size4"
            android:textStyle="normal"
            android:textColor="@color/color3"/>
        <TextView
            android:id="@+id/tv_mcn3"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_mcn2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/Size4"
            android:layout_marginTop="@dimen/Size5"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="@dimen/Size4"
            android:textStyle="bold"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/color3"
            android:text="@string/dg_sp"
            />
        <TextView
            android:id="@+id/tv_don_gia"
            android:layout_width="@dimen/Size9"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_ten_sp_2"
            app:layout_constraintStart_toEndOf="@+id/tv_mcn3"
            android:layout_marginStart="@dimen/Size6"
            android:layout_marginTop="@dimen/Size5"
            android:textSize="@dimen/Size4"
            android:background="@drawable/custom_edit_text"
            android:textStyle="normal"
            android:hint="vnd"
            android:textColor="@color/color3"/>

        <ImageView
            android:id="@+id/edit"
            android:layout_width="@dimen/edit"
            android:layout_height="@dimen/edit"
            android:background="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toEndOf="@+id/tv_ten_sp_2"

            app:layout_constraintTop_toBottomOf="@+id/tv_ma" />

        <ImageView
            android:id="@+id/xoa"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_baseline_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toEndOf="@id/tv_don_gia"
            app:layout_constraintTop_toBottomOf="@id/edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>